# Pac-Man-Game

./: .gitignore  LICENSE  README.md
docs/: README-zh.md
release/: Pac-Man.iobj  Pac-Man.ipdb
src/: CMakeLists.txt  Ghost.cpp  Ghost.h  GhostTypes.cpp  GhostTypes.h  Gizmo.cpp  Gizmo.h  Ground.cpp  Ground.h  LFont.cpp  LFont.h  LTexture.cpp  LTexture.h  Level.cpp  Level.h  Player.cpp  Player.h  Settings.h  Sprite.cpp  Sprite.h  game.cpp  main.cpp
src/Assets/: font.psd  food.psd  food_new.psd  icon.psd  logo.psd  number_font.psd  pacman.psd  wall.psd
src/Environment/: SDL2环境配置说明.md
